[package]
name = "rust_2021_advent_of_code"
version = "0.1.0"
edition = "2021"

[profile.bench]
lto = true


[[bin]]
name = "rust_2021_advent_of_code"
path = "src/main.rs"

[[bench]]
name = "j1"
path = "src/bench_j1.rs"
harness = false

[[bench]]
name = "j2"
path = "src/bench_j2.rs"
harness = false

[[bench]]
name = "j3"
path = "src/bench_j3.rs"
harness = false

[dependencies]
itertools="0.10.1"
criterion = {version="0.3.5", features=["html_reports"]}