[package]
name = "rust_2021_advent_of_code"
version = "0.1.0"
edition = "2021"

[profile.bench]
lto = true


[[bin]]
name = "rust_2021_advent_of_code"
path = "src/main.rs"

[[bench]]
name = "j1"
path = "src/bench_j1.rs"
harness = false

[[bench]]
name = "j2"
path = "src/bench_j2.rs"
harness = false

[[bench]]
name = "j3"
path = "src/bench_j3.rs"
harness = false

[[bench]]
name = "j4"
path = "src/bench_j4.rs"
harness = false

[[bench]]
name = "j5"
path = "src/bench_j5.rs"
harness = false

[[bench]]
name = "j6"
path = "src/bench_j6.rs"
harness = false

[[bench]]
name = "j7"
path = "src/bench_j7.rs"
harness = false

[[bench]]
name = "j8"
path = "src/bench_j8.rs"
harness = false

[[bench]]
name = "j9"
path = "src/bench_j9.rs"
harness = false

[[bench]]
name = "j10"
path = "src/bench_j10.rs"
harness = false

[[bench]]
name = "j11"
path = "src/bench_j11.rs"
harness = false

[dependencies]
itertools="0.10.1"
criterion = {version="0.3.5", features=["html_reports"]}
dashmap = "4.0.2"
threadpool = "1.8.1"