[package]
name = "rust_2021_advent_of_code"
version = "0.1.0"
edition = "2021"

[profile.bench]
lto = true


[[bin]]
name = "rust_2021_advent_of_code"
path = "src/main.rs"

[[bench]]
name = "j1"
path = "src/bench_j1.rs"
harness = false

[[bench]]
name = "j2"
path = "src/bench_j2.rs"
harness = false

[[bench]]
name = "j3"
path = "src/bench_j3.rs"
harness = false

[[bench]]
name = "j4"
path = "src/bench_j4.rs"
harness = false

[[bench]]
name = "j5"
path = "src/bench_j5.rs"
harness = false

[[bench]]
name = "j6"
path = "src/bench_j6.rs"
harness = false

[[bench]]
name = "j7"
path = "src/bench_j7.rs"
harness = false

[[bench]]
name = "j8"
path = "src/bench_j8.rs"
harness = false

[[bench]]
name = "j9"
path = "src/bench_j9.rs"
harness = false

[[bench]]
name = "j10"
path = "src/bench_j10.rs"
harness = false

[[bench]]
name = "j11"
path = "src/bench_j11.rs"
harness = false

[[bench]]
name = "j12"
path = "src/bench_j12.rs"
harness = false

[[bench]]
name = "j13"
path = "src/bench_j13.rs"
harness = false

[[bench]]
name = "j14"
path = "src/bench_j14.rs"
harness = false

[[bench]]
name = "j15"
path = "src/bench_j15.rs"
harness = false

[[bench]]
name = "j16"
path = "src/bench_j16.rs"
harness = false

[[bench]]
name = "j17"
path = "src/bench_j17.rs"
harness = false

[[bench]]
name = "j18"
path = "src/bench_j18.rs"
harness = false

[[bench]]
name = "j19"
path = "src/bench_j19.rs"
harness = false

[[bench]]
name = "j20"
path = "src/bench_j20.rs"
harness = false

[[bench]]
name = "j21"
path = "src/bench_j21.rs"
harness = false

[[bench]]
name = "j22"
path = "src/bench_j22.rs"
harness = false

[[bench]]
name = "j23"
path = "src/bench_j23.rs"
harness = false

[[bench]]
name = "j24"
path = "src/bench_j24.rs"
harness = false

[[bench]]
name = "j25"
path = "src/bench_j25.rs"
harness = false

[dependencies]
itertools="0.10.1"
criterion = {version="0.3.5", features=["html_reports"]}
dashmap = "4.0.2"
threadpool = "1.8.1"
smallvec = "1.7.0"
regex = "1.5.4"
peg = "0.7.0"
rand = "0.8.4"